--- a/lineLength/index.html
+++ b/lineLength/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,17 @@
   <title>Test: Sentence length</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+  <nav>
+    <ul>
+      <li><a href="/font-emotion/font-emotion.html">1. Emotie in kleur</a></li>
+      <li><a href="/sprekers/index.html">2. Spreker visualisatie</a></li>
+      <li><a href="/font-size/fontsize.html">3. Font & sizes</a></li>
+      <li class="active"><a href="/lineLength/index.html">4. Tekst layout</a></li>
+      <li><a href="/text-animation/index.html">5. Tekst animatie</a></li>
+    </ul>
+  </nav>
 
   <main>
     <header>
@@ -22,19 +33,32 @@
       </code>
     </pre>
     </header>
-    <article >
+    <article>
       <h1>65 characters width</h1>
-      <p class="opt65" >In New York, like in lots of cities, you can call 3-1-1 for help with city services, but also for all kinds of other stuff. The most common calls they get are about landlords not heating apartments properly. But they'll also help you get hold of a W-2 form you need from 2009. They'll tell you what streets will be blocked off for a presidential visit, connect you with the gas company, and a stunning array of other things-- 55,000 calls a day.</p>
+      <p class="opt65">In New York, like in lots of cities, you can call 3-1-1 for help with city services, but also for
+        all kinds of other stuff. The most common calls they get are about landlords not heating apartments properly.
+        But they'll also help you get hold of a W-2 form you need from 2009. They'll tell you what streets will be
+        blocked off for a presidential visit, connect you with the gas company, and a stunning array of other things--
+        55,000 calls a day.</p>
     </article>
-    <article >
+    <article>
       <h1>30em width</h1>
-      <p class="opt30em" >In New York, like in lots of cities, you can call 3-1-1 for help with city services, but also for all kinds of other stuff. The most common calls they get are about landlords not heating apartments properly. But they'll also help you get hold of a W-2 form you need from 2009. They'll tell you what streets will be blocked off for a presidential visit, connect you with the gas company, and a stunning array of other things-- 55,000 calls a day.</p>
+      <p class="opt30em">In New York, like in lots of cities, you can call 3-1-1 for help with city services, but also
+        for all kinds of other stuff. The most common calls they get are about landlords not heating apartments
+        properly. But they'll also help you get hold of a W-2 form you need from 2009. They'll tell you what streets
+        will be blocked off for a presidential visit, connect you with the gas company, and a stunning array of other
+        things-- 55,000 calls a day.</p>
     </article>
-    <article >
+    <article>
       <h1>100% width</h1>
-      <p class="opt100per" >In New York, like in lots of cities, you can call 3-1-1 for help with city services, but also for all kinds of other stuff. The most common calls they get are about landlords not heating apartments properly. But they'll also help you get hold of a W-2 form you need from 2009. They'll tell you what streets will be blocked off for a presidential visit, connect you with the gas company, and a stunning array of other things-- 55,000 calls a day.</p>
+      <p class="opt100per">In New York, like in lots of cities, you can call 3-1-1 for help with city services, but also
+        for all kinds of other stuff. The most common calls they get are about landlords not heating apartments
+        properly. But they'll also help you get hold of a W-2 form you need from 2009. They'll tell you what streets
+        will be blocked off for a presidential visit, connect you with the gas company, and a stunning array of other
+        things-- 55,000 calls a day.</p>
     </article>
   </main>
   <script src="index.js"></script>
 </body>
+
 </html>
