--- a/font-emotion/font-emotion.html
+++ b/font-emotion/font-emotion.html
@@ -13,9 +13,18 @@
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li class="active"><a href="/font-emotion/font-emotion.html">1. Emotie in kleur</a></li>
+            <li><a href="/sprekers/index.html">2. Spreker visualisatie</a></li>
+            <li><a href="/font-size/fontsize.html">3. Font & sizes</a></li>
+            <li><a href="/lineLength/index.html">4. Tekst layout</a></li>
+            <li><a href="/text-animation/index.html">5. Tekst animatie</a></li>
+        </ul>
+    </nav>
     <header>
         <h1>Emotie in tekst</h1>
-        <p>kleuren kunnen met meerdere dingen worden geassocieerd. Kleur wordt gebruikt bij tempreatuur, om belangrijke
+        <p>Kleuren kunnen met meerdere dingen worden geassocieerd. Kleur wordt gebruikt bij tempreatuur, om belangrijke
             onderdelen te highlighten, maar het kan ook gebruikt worden voor emoties. Kunnen kleuren de emoties in een
             stuk tekst versterken?</p>
     </header>
