--- a/text-animation/index.html
+++ b/text-animation/index.html
@@ -10,6 +10,15 @@
 <body>
 
     <main>
+        <nav>
+            <ul>
+                <li><a href="/font-emotion/font-emotion.html">1. Emotie in kleur</a></li>
+                <li><a href="/sprekers/index.html">2. Spreker visualisatie</a></li>
+                <li><a href="/font-size/fontsize.html">3. Font & sizes</a></li>
+                <li><a href="/lineLength/index.html">4. Tekst layout</a></li>
+                <li class="active"><a href="/text-animation/index.html">5. Tekst animatie</a></li>
+            </ul>
+        </nav>
         <header>
             <h1> Podcast</h1>
             <p>Het leek mij een toegevoegde waarde om de nadruk van tekst tijdens een podcast beter naar voren te
