--- a/font-emotion/font-emotion.html
+++ b/font-emotion/font-emotion.html
@@ -15,11 +15,11 @@
 <body>
     <nav>
         <ul>
-            <li class="active"><a href="/font-emotion/font-emotion.html">1. Emotie in kleur</a></li>
-            <li><a href="/sprekers/index.html">2. Spreker visualisatie</a></li>
-            <li><a href="/font-size/fontsize.html">3. Font & sizes</a></li>
-            <li><a href="/lineLength/index.html">4. Tekst layout</a></li>
-            <li><a href="/text-animation/index.html">5. Tekst animatie</a></li>
+            <li class="active"><a href="../font-emotion/font-emotion.html">1. Emotie in kleur</a></li>
+            <li><a href="../sprekers/index.html">2. Spreker visualisatie</a></li>
+            <li><a href="../font-size/fontsize.html">3. Font & sizes</a></li>
+            <li><a href="../lineLength/index.html">4. Tekst layout</a></li>
+            <li><a href="../text-animation/index.html">5. Tekst animatie</a></li>
         </ul>
     </nav>
     <header>
