--- a/font-emotion/font-emotion.html
+++ b/font-emotion/font-emotion.html
@@ -20,6 +20,7 @@
             <li><a href="../font-size/fontsize.html">3. Font & sizes</a></li>
             <li><a href="../lineLength/index.html">4. Tekst layout</a></li>
             <li><a href="../text-animation/index.html">5. Tekst animatie</a></li>
+            <li><a href="https://ralfz123.github.io/human-centered-design-2021/test-1/">Closed captions</a></li>
         </ul>
     </nav>
     <header>
