another test environment, click for content

--- a/test2.html
+++ b/test2.html
@@ -11,7 +11,7 @@
     <!-- scripts  -->
     <script src="transcriptie.js" defer></script>
     <script src="fontsize-script.js" defer></script>
-    <script src="transcription-reading.js" defer></script>
+    <script src="transcription-reading-test2.js" defer></script>
 
     <!-- fonts  -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -57,14 +57,13 @@
 
         </nav>
         <section>
-            <button id="start">Start podcast</button>
             <div class="box">
 
             </div>
 
             <div class="roundels">
                 <div class="roundVasilis">Vasilis</div>
-                <div class="roundEspen">Espen</div>
+                <div class="roundEspen inactive">Espen</div>
             </div>
 
             <!-- <p><span class='vasilis'>Vasilis:</span> Lorem</p>  -->
