update instructions test2

--- a/test2.html
+++ b/test2.html
@@ -63,6 +63,7 @@
 
             <div class="roundels">
                 <div class="roundVasilis">Vasilis</div>
+                <div class="instructions">Click on the left speakers icon</div>
                 <div class="roundEspen inactive">Espen</div>
             </div>
 
