update on navigation

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <!-- podcast transcription vasilis  -->
         <nav>
             <ul>
-                <li><a href="index.html">Test omgeving 1</a></li>
+                <li><a href="index.html" class="activeEnvironment">Test omgeving 1</a></li>
                 <li><a href="test2.html">Test omgeving 2</a></li>
             </ul>
 
