--- a/test2.html
+++ b/test2.html
@@ -55,7 +55,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Test omgeving 1</a></li>
-                <li><a href="test2.html">Test omgeving 2</a></li>
+                <li><a href="test2.html" class="activeEnvironment">Test omgeving 2</a></li>
             </ul>
 
         </nav>
