--- a/index.html
+++ b/index.html
@@ -26,54 +26,19 @@
 
 <body>
     <header class="optionsHeader">
-        <article class="options">
-            <h1>Font and sizes</h1>
-            <section>
-                <article>
-                    <input type="range" min="10" max="40" step="1" value="22" id="fontRange">
-                    <p>Letter grootte is: <span id="targetedFontSize">22 px</span></p>
-                </article>
-                <article>
-                    <input type="range" min="10" max="60" step="1" value="33" id="lineHeightRange">
-                    <p>Interlinie is: <span id="targetedLineHeight">33 px</span></p>
-                </article>
-            </section>
-            <section>
-                <input type="radio" id="Roboto" name="font" value="Roboto" checked>
-                <label for="Roboto">Roboto (sans-serif)</label>
-                <input type="radio" id="playFair" name="font" value="playFair">
-                <label for="playFair">Play Fair (serif)</label>
-                <input type="radio" id="gloria" name="font" value="gloria">
-                <label for="gloria">Something different</label>
-            </section>
-            <button id="resetButton">reset</button>
-            <button id="optionsToggle">Show font options</button>
-        </article>
-    </header>
-    <main>
-        <!-- podcast transcription vasilis  -->
         <nav>
             <ul>
-                <li><a href="index.html" class="activeEnvironment">Test omgeving 1</a></li>
-                <li><a href="test2.html">Test omgeving 2</a></li>
+                <!-- <li><a href="index.html" class="activeEnvironment">Overzicht</a></li>
+                <li><a href="../font-size/fontsize.html" target="_blank">Prototype 1</a></li>
+                <li><a href="prototype2_test1.html">Prototype 2: Test 1</a></li>
+                <li><a href="prototype2_test2.html">Prototype 2: Test 2</a></li> -->
+                <li><a href="prototype3_test1.html">Prototype test 1</a></li>
+                <li><a href="prototype3_test2.html">Prototype test 2</a></li>
+                <li><a href="prototype3_test3.html">Prototype test 3</a></li>
             </ul>
-
         </nav>
-        <section>
-
-            <div class="box">
-
-            </div>
-
-            <div class="roundels">
-                <div class="roundVasilis">Vasilis</div>
-                <button id="start">Start podcast</button>
-                <div class="roundEspen">Espen</div>
-            </div>
-
-            <!-- <p><span class='vasilis'>Vasilis:</span> Lorem</p>  -->
-            <!-- <p><span class='espen'>Espen:</span> Lorem</p>  -->
-        </section>
+    </header>
+    <main>
     </main>
 </body>
 
