--- a/prototype2_test1.html
+++ b/prototype2_test1.html
@@ -14,7 +14,7 @@
     <!-- scripts  -->
     <script src="transcriptie.js" defer></script>
     <script src="fontsize-script.js" defer></script>
-    <script src="transcription-reading-test2.js" defer></script>
+    <script src="transcription-reading.js" defer></script>
 
     <!-- fonts  -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -54,20 +54,23 @@
         <!-- podcast transcription vasilis  -->
         <nav>
             <ul>
-                <li><a href="index.html">Test omgeving 1</a></li>
-                <li><a href="test2.html" class="activeEnvironment">Test omgeving 2</a></li>
+                <li><a href="index.html">Overzicht</a></li>
+                <li><a href="../font-size/fontsize.html" target="_blank">Prototype 1</a></li>
+                <li><a href="prototype2_test1.html" class="activeEnvironment">Prototype 2: Test 1</a></li>
+                <li><a href="prototype2_test2.html">Prototype 2: Test 2</a></li>
+                <li><a href="prototype3.html">Prototype 3</a></li>
             </ul>
-
         </nav>
         <section>
+
             <div class="box">
 
             </div>
 
             <div class="roundels">
                 <div class="roundVasilis">Vasilis</div>
-                <div class="instructions">Click on the left speakers icon</div>
-                <div class="roundEspen inactive">Espen</div>
+                <button id="start">Start podcast</button>
+                <div class="roundEspen">Espen</div>
             </div>
 
             <!-- <p><span class='vasilis'>Vasilis:</span> Lorem</p>  -->
