--- a/prototype3_test3.html
+++ b/prototype3_test3.html
@@ -70,7 +70,7 @@
 
             <div class="roundels">
                 <!-- <div class="roundVasilis">Vasilis</div> -->
-                <button id="start">Start silence</button>
+                <button id="start">Start being suprised</button>
                 <!-- <div class="roundEspen">Espen</div> -->
             </div>
 
