--- a/prototype3_test3.html
+++ b/prototype3_test3.html
@@ -37,6 +37,7 @@
                 <li><a href="prototype3_test1.html">Prototype test 1</a></li>
                 <li><a href="prototype3_test2.html">Prototype test 2</a></li>
                 <li><a href="prototype3_test3.html" class="activeEnvironment">Prototype test 3</a></li>
+                <li><a href="prototype3_test4.html">Prototype test 4</a></li>
             </ul>
         </nav>
         <section>
