--- a/eindproduct/eindproduct.html
+++ b/eindproduct/eindproduct.html
@@ -202,7 +202,8 @@
 
             <div class="roundels">
                 <div class="roundVasilis">
-                    <svg x="0px" y="0px" viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                        x="0px" y="0px" viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;">
                         <style type="text/css">
                             .st0 {
                                 fill-rule: evenodd;
@@ -452,7 +453,8 @@
                 </div>
                 <button id="start">Start podcast</button>
                 <div class="roundEspen">
-                    <svg x="0px" y="0px" viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                        x="0px" y="0px" viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;">
                         <style type="text/css">
                             .Espenst0 {
                                 fill: #774703;
