--- a/eindproduct/eindproduct.html
+++ b/eindproduct/eindproduct.html
@@ -51,41 +51,41 @@
         </article>
     </header>
     <main>
-        <!-- podcast transcription vasilis  -->
-        <!-- <nav>
-            <ul>
-                <li><a href="index.html">Overzicht</a></li>
-                <li><a href="../font-size/fontsize.html" target="_blank">Prototype 1</a></li>
-                <li><a href="prototype2_test1.html" class="activeEnvironment">Prototype 2: Test 1</a></li>
-                <li><a href="prototype2_test2.html">Prototype 2: Test 2</a></li>
-                <li><a href="prototype3.html">Prototype 3</a></li>
-            </ul>
-        </nav> -->
+        <!-- podcast transcription by vasilis:   https://webmaterials.design/posts/01-hello-world/-->
+        <div class="podcastInfo">
+            <div class="infoWrapper">
+                <p><span>Podcast:</span> Hello world</p>
+                <p><span>By:</span> Vasilis & Espen</p>
+                <p><span>Episode 1 - 05 april 2021</span></p>
+                <p class="podcastDescription">In the very first episode of Web Materials, we introduce ourselves and
+                    briefly touch upon some of the
+                    topics we hope to discuss going forward.</p>
+            </div>
+            <div class="podcastInfoClicker">
+                <p>podcast info</p>
+            </div>
+        </div>
+
         <section>
             <audio id="adi" controls>
                 <source src="sounds/podcast-short.mp3">
                 </source>
             </audio>
 
-            <div class="box">
-                <!-- <p class="message message1">
-                    <span class='espen'>Espen:</span>
-                    <span class="words" id="ts0"> ...I </span>
-                    <span class="words" id="ts0.500">really</span>
-                    <span class="words" id="ts1.000"> like </span>
-                    <span class="words" id="ts1.500"> web materials,</span>
 
-                </p> -->
+            <div class="box">
+                <div class="mario">
+                    <img src="../images/mario.png" alt="">
+                </div>
                 <p class="message message0">
-                    <!-- <span class='vasilis'>Vasilis:</span> -->
-                    <span class="words smile" id="ts0.000"> Intro music </span>
+                    <span class="words smile mushroom" id="ts0.000"> Intro music - old 8bit game music sound
+                    </span>
                 </p>
 
                 <p class="message message1">
                     <span class='speakerV vasilis smile' id="ts5.600">Vasilis:</span>
                     <span class="words vasilis aei" id="ts6.000"> Web </span>
-                    <span class="words vasilis neutral" id="ts6.300"> materials! </span>
-                    <span class="words vasilis smile" id="ts6.600"> </span>
+                    <span class="words vasilis smile" id="ts6.300"> materials! </span>
                 </p>
 
                 <p class="message message2">
@@ -95,8 +95,7 @@
                     <span class="words espen qw" id="ts8.400">what </span>
                     <span class="words espen aei" id="ts8.600">we’re</span>
                     <span class="words espen neutral" id="ts8.800">calling</span>
-                    <span class="words espen thl" id="ts9.000">it?</span>
-                    <span class="espen smile" id="ts9.300"> </span>
+                    <span class="words espen smile" id="ts9.000">it?</span>
                 </p>
 
                 <p class="message message3">
@@ -120,7 +119,7 @@
                     <span class="words espen qw" id="ts14.000">web </span>
                     <span class="words espen neutral" id="ts14.300">materials, </span>
                     <span class="words espen aei" id="ts15.200">i'm </span>
-                    <span class="words espen smile" id="ts15.400">surprised - </span>
+                    <span class="words espen smile suprised" id="ts15.400">surprised - </span>
                     <span class="words espen aei" id="ts16.600">i'm </span>
                     <span class="words espen thl" id="ts16.800">surprised </span>
                     <span class="words espen neutral" id="ts17.000">there's </span>
@@ -173,7 +172,7 @@
                     <span class="words espen thl" id="ts30.200">true, </span>
                     <span class="words espen thl" id="ts30.700">this </span>
                     <span class="words espen aei" id="ts31.000">is </span>
-                    <span class="words espen smile" id="ts31.300">true. </span>
+                    <span class="words espen smile thumble" id="ts31.300">true. </span>
                     <span class="words espen oMouth" id="ts33.100">So, </span>
                     <span class="words espen neutral" id="ts33.400">should </span>
                     <span class="words espen aei" id="ts33.700">we </span>
@@ -423,7 +422,7 @@
                             </g>
                         </g>
                         <g id="Ogen">
-                            <g id="open">
+                            <g id="open" class="vasilisEyesOpen">
                                 <path id="path2698" sodipodi:nodetypes="ccc" class="st12" d="M34.6,19.4c2.6,0.5,3.8,2.3,3.4,4.9C35.1,29.4,29.3,22.3,34.6,19.4z
                                 " />
                                 <path id="path2702" sodipodi:nodetypes="cssc" class="st13" d="M35.2,22.6c-0.5-0.9,2.2-0.2,1.5,2c-0.4,1.5-2.1,0.6-2.2,0.5
@@ -433,7 +432,7 @@
                                 <path id="path2700" sodipodi:nodetypes="cssc" class="st13" d="M23.3,23.2c-0.6,0,0.7-2,2.3-0.5c1.2,1.2-0.1,2.8-1,2.9
                                 C22.8,25.9,22.5,23.5,23.3,23.2z" />
                             </g>
-                            <g id="closed" class="st4">
+                            <g id="closed" class="st4 vasilisEyesClosed">
                                 <path class="st14" d="M21.7,23.6c0,0,0-1.9,2.8-1.9s2.8,1.9,2.8,1.9" />
                                 <path class="st14" d="M32.8,23.6c0,0-0.1-1.9,2.7-1.9c2.8,0,2.8,1.9,2.8,1.9" />
                             </g>
@@ -451,8 +450,11 @@
 
 
                 </div>
-                <button id="start">Start podcast</button>
+                <button id="start">Play</button>
+                <button id="pause">Pause</button>
+                <button id="reset">Reset</button>
                 <div class="roundEspen">
+                    <img src="../images/thumbleweed.png" class="thumbleWeed" alt="ThubleWeed">
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                         x="0px" y="0px" viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;">
                         <style type="text/css">
@@ -734,7 +736,7 @@
                             </g>
                         </g>
                         <g id="espenEyes">
-                            <g id="espenOpenEyes" class="openEyes">
+                            <g id="espenOpenEyes" class="espenOpenEyes">
                                 <g>
                                     <path class="Espenst21"
                                         d="M28.2,32.7c-0.7-0.3-1.5-0.3-2.1,0c-1.6-1.1-0.5-5,1.7-4.3C29.3,29,29.5,31.8,28.2,32.7z" />
@@ -748,7 +750,7 @@
                                 <path class="Espenst22"
                                     d="M43.9,26.4c0.7-0.3,1.2,0.8,0.7,1.2C43.9,28.2,43.2,26.7,43.9,26.4z" />
                             </g>
-                            <g id="espenClosedEyes" class="Espenst13 closedEyes">
+                            <g id="espenClosedEyes" class="Espenst13 espenClosedEyes">
                                 <path class="Espenst23" d="M25.3,31c0,0,0.2-0.3,1.9-0.3s1.9,0.3,1.9,0.3" />
                                 <path class="Espenst23" d="M42.5,29c0,0,0.1-0.4,1.7-0.8s1.9-0.1,1.9-0.1" />
                             </g>
@@ -756,6 +758,13 @@
                     </svg>
 
                 </div>
+            </div>
+
+
+            <div class="nuances">
+                <img src="https://media.giphy.com/media/XfnRkIungOgkczyrrF/giphy.gif" class="friendsSuprised"
+                    alt="friends gif">
+
             </div>
 
             <!-- <p><span class='vasilis'>Vasilis:</span> Lorem</p>  -->
