--- a/eindproduct/eindproduct.html
+++ b/eindproduct/eindproduct.html
@@ -44,7 +44,7 @@
                 <input type="radio" id="playFair" name="font" value="playFair">
                 <label for="playFair">Play Fair (serif)</label>
                 <input type="radio" id="gloria" name="font" value="gloria">
-                <label for="gloria">Something different</label>
+                <label for="gloria">Make it fun! (suprise)</label>
             </section>
             <button id="resetButton">reset</button>
             <button id="optionsToggle">Show font options</button>
