--- a/index.html
+++ b/index.html
@@ -26,15 +26,17 @@
 
 <body>
     <header class="optionsHeader">
+        <h1>Protypes podcast</h1>
         <nav>
             <ul>
-                <!-- <li><a href="index.html" class="activeEnvironment">Overzicht</a></li>
+                <li><a href="index.html" class="activeEnvironment">Overzicht</a></li>
                 <li><a href="../font-size/fontsize.html" target="_blank">Prototype 1</a></li>
-                <li><a href="prototype2_test1.html">Prototype 2: Test 1</a></li>
-                <li><a href="prototype2_test2.html">Prototype 2: Test 2</a></li> -->
-                <li><a href="prototype3_test1.html">Prototype test 1</a></li>
-                <li><a href="prototype3_test2.html">Prototype test 2</a></li>
-                <li><a href="prototype3_test3.html">Prototype test 3</a></li>
+                <li><a href="../prototypeTwo/prototype2_test1.html" target="_blank">Prototype 2: test 1</a></li>
+                <li><a href="../prototypeTwo/prototype2_test2.html" target="_blank">Prototype 2: test 2</a></li>
+                <li><a href="../prototypeThree/prototype3_test1.html" target="_blank">Prototype 3: test 1</a></li>
+                <li><a href="../prototypeThree/prototype3_test2.html" target="_blank">Prototype 3: test 2</a></li>
+                <li><a href="../prototypeThree/prototype3_test3.html" target="_blank">Prototype 3: test 3</a></li>
+                <li><a href="../eindproduct/eindproduct.html" class="final" target="_blank">Final product</a></li>
             </ul>
         </nav>
     </header>
