--- a/index.html
+++ b/index.html
@@ -30,13 +30,20 @@
         <nav>
             <ul>
                 <li><a href="index.html" class="activeEnvironment">Overzicht</a></li>
-                <li><a href="../font-size/fontsize.html" target="_blank">Prototype 1</a></li>
-                <li><a href="../prototypeTwo/prototype2_test1.html" target="_blank">Prototype 2: test 1</a></li>
-                <li><a href="../prototypeTwo/prototype2_test2.html" target="_blank">Prototype 2: test 2</a></li>
-                <li><a href="../prototypeThree/prototype3_test1.html" target="_blank">Prototype 3: test 1</a></li>
-                <li><a href="../prototypeThree/prototype3_test2.html" target="_blank">Prototype 3: test 2</a></li>
-                <li><a href="../prototypeThree/prototype3_test3.html" target="_blank">Prototype 3: test 3</a></li>
-                <li><a href="../eindproduct/eindproduct.html" class="final" target="_blank">Final product</a></li>
+                <li><a href="https://nathanneelis.github.io/human-centered-design-2021/font-size/fontsize.html"
+                        target="_blank">Prototype 1</a></li>
+                <li><a href="https://nathanneelis.github.io/human-centered-design-2021/prototypeTwo/prototype2_test1.html"
+                        target="_blank">Prototype 2: test 1</a></li>
+                <li><a href="https://nathanneelis.github.io/human-centered-design-2021/prototypeTwo/prototype2_test2.html"
+                        target="_blank">Prototype 2: test 2</a></li>
+                <li><a href="https://nathanneelis.github.io/human-centered-design-2021/prototypeThree/prototype3_test1.html"
+                        target="_blank">Prototype 3: test 1</a></li>
+                <li><a href="https://nathanneelis.github.io/human-centered-design-2021/prototypeThree/prototype3_test2.html"
+                        target="_blank">Prototype 3: test 2</a></li>
+                <li><a href="https://nathanneelis.github.io/human-centered-design-2021/prototypeThree/prototype3_test3.html"
+                        target="_blank">Prototype 3: test 3</a></li>
+                <li><a href="https://nathanneelis.github.io/human-centered-design-2021/eindproduct/eindproduct.html"
+                        class="final" target="_blank">Final product</a></li>
             </ul>
         </nav>
     </header>
